[gd_scene load_steps=3 format=3 uid="uid://ct2dmvumoh544"]

[ext_resource type="Script" path="res://objects/resource_viewer/ResourceViewer.gd" id="1_6vrf6"]

[sub_resource type="Environment" id="Environment_ybniq"]
background_mode = 1
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)

[node name="SurfaceViewer" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 0
offset_right = 8.0
offset_bottom = 8.0
script = ExtResource("1_6vrf6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Main" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="SubViewContainer" type="SubViewportContainer" parent="Main"]
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Main/SubViewContainer"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(60, 60)
render_target_update_mode = 4

[node name="Gimble" type="Node3D" parent="Main/SubViewContainer/SubViewport"]

[node name="Camera_Wall" type="Camera3D" parent="Main/SubViewContainer/SubViewport/Gimble"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.5, -3)

[node name="Camera_Ground" type="Camera3D" parent="Main/SubViewContainer/SubViewport/Gimble"]
transform = Transform3D(-1, -5.61943e-08, 6.69697e-08, 0, 0.766044, 0.642788, -8.74228e-08, 0.642788, -0.766044, 0, 2.5, -3)
current = true

[node name="Camera_Ceiling" type="Camera3D" parent="Main/SubViewContainer/SubViewport/Gimble"]
transform = Transform3D(-1, -5.61943e-08, -6.69697e-08, 0, 0.766044, -0.642788, 8.74228e-08, -0.642788, -0.766044, 0, 2.5, -3)

[node name="WorldEnvironment" type="WorldEnvironment" parent="Main/SubViewContainer/SubViewport"]
environment = SubResource("Environment_ybniq")
